test/error/nonstringconcat1.luau
print(table.concat { function() end })
